--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -14,5 +14,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set Up Dart
+        uses: subosito/flutter-action@v2.8.0
+      - name: Install Dependencies
+        run: dart pub get
       - name: Format Dart Imports
         uses: dart-actions/format-dart-imports@v0.0.3
