--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,11 +12,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set Up Dart
-        uses: subosito/flutter-action@v2.8.0
-      - name: Install Dependencies
-        run: dart pub get
       - name: Format Dart Imports
-        run: dart run import_sorter:main
+        uses: dart-actions/format-dart-imports@v0.0.6
